# anson-v2

./: .gitignore  LICENSE  README.md
.claude-plugin/: plugin.json
references/: granola.md  notion_integration.md  scheduled_tasks.md
scaffolds/: AGENTS.md.tmpl  MEMORY.md.tmpl  SOUL.md.tmpl  env.tmpl
scaffolds/skills/granola-digest/: SKILL.md.tmpl
scaffolds/skills/granola-digest/scripts/: granola.py.tmpl
scaffolds/skills/note-management/scripts/: directives.py
scaffolds/slack-bridge/: .env.example  README.md
scaffolds/slack-bridge/launchd/: ai.slack-bridge.gateway.plist.tmpl  install.sh  uninstall.sh
scaffolds/slack-bridge/scripts/: read_user_dm.py
scaffolds/slack-bridge/src/slack_bridge/: __main__.py  _io.py  config.py  session_visibility.py  slack_listener.py
scripts/: verify_gcal.py  verify_imessage.sh
skills/anson/: SKILL.md
skills/anson/references/: imessage_mac.md  oauth_gmail.md  oauth_google_cal.md  slack_app.md  slack_tokens.md
skills/anson/scaffolds/: ANSON_META.md.tmpl  CLAUDE.md.tmpl  IDENTITY.md.tmpl  KEY_PEOPLE.md.tmpl  USER.md.tmpl
skills/anson/scaffolds/skills/_generic/: SKILL.md.tmpl
skills/anson/scaffolds/slack-bridge/: .env.example  .gitignore  pyproject.toml
skills/anson/scaffolds/slack-bridge/scripts/: post_to_slack.py  read_user_dm.py
skills/anson/scaffolds/slack-bridge/src/slack_bridge/: __init__.py  _io.py  delivery.py  dispatch.py  pairing.py  sessions.py  slack_listener.py  thread_context.py
skills/anson/scripts/: verify_gmail.py  verify_granola.py  verify_notion.py  verify_slack.py
(+9 files in other folders)
